test/features/errors/semantic/e1078_invalid_intrinsic_return.spl
# E1078: Invalid Intrinsic Return

Feature: E1078 - Intrinsic Has Invalid Return Type
  As a Simple compiler
  I want to detect invalid return types in intrinsics
  So that intrinsics return the correct types

  Background:
    Given I have the Simple compiler

  Scenario: Intrinsic with wrong return type
    When I compile:
      '''
      #[intrinsic]
      fn size_of<T>() -> i32  # Error: should return usize
      '''
    Then I should see error E1078 at line 2
    And the error message should be "intrinsic `{intrinsic}` has invalid return type"
    And the label should indicate "invalid return type"
    And the help should suggest "use the correct return type for this intrinsic"

  Scenario: Valid intrinsic return type
    When I compile:
      '''
      #[intrinsic]
      fn size_of<T>() -> usize  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      #[intrinsic]
      fn size_of<T>() -> i32
      '''
    Then I should see error E1078
    And the error message should contain "잘못된 내장 함수 반환"
